tests/spec/emit/snapshots/enumerated_slice_find.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Option<(int, int)> {
    s.enumerate().find(|(_, v)| v > 10)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s []int) (lisette.Tuple2[int, int], bool) {
	v_1 := lisette.EnumeratedSliceFind(s, func(arg lisette.Tuple2[int, int]) bool {
		v := arg.Second
		return v > 10
	})
	if v_1.Tag == lisette.OptionSome {
		return v_1.SomeVal, true
	}
	return lisette.Tuple2[int, int]{}, false
}
