tests/spec/emit/snapshots/enumerated_slice_map.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.enumerate().map(|(i, v)| i * v)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s []int) []int {
	return lisette.EnumeratedSliceMap(s, func(arg lisette.Tuple2[int, int]) int {
		i := arg.First
		v := arg.Second
		return i * v
	})
}
