tests/spec/emit/snapshots/equality_empty_struct.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Blank {}
---
package main

type Blank struct{}

func (b Blank) equals(other Blank) bool {
	return true
}
