tests/spec/emit/snapshots/equality_enum_payload_generic_synthesized_equality.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Box<T: Comparable> { items: Slice<T> }
  
  #[equality]
  enum Wrap { Wrapped(Box<int>) }
---
package main

import "slices"

func MakeWrapWrapped(arg0 Box[int]) Wrap {
	return Wrap{Tag: WrapWrapped, Wrapped: arg0}
}

type Box[T comparable] struct {
	items []T
}

func (b Box[T]) equals(other Box[T]) bool {
	return slices.Equal(b.items, other.items)
}

type WrapTag uint8

const (
	WrapWrapped WrapTag = iota
)

type Wrap struct {
	Tag     WrapTag
	Wrapped Box[int]
}

func (w Wrap) equals(other Wrap) bool {
	if w.Tag != other.Tag {
		return false
	}
	switch w.Tag {
	case WrapWrapped:
		return w.Wrapped.equals(other.Wrapped)
	default:
		return true
	}
}
