tests/spec/emit/snapshots/equality_enum_payload_variants.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  enum Shape {
    Circle(float64),
    Rectangle(float64, float64),
  }
---
package main

func MakeShapeCircle(arg0 float64) Shape {
	return Shape{Tag: ShapeCircle, Circle: arg0}
}

func MakeShapeRectangle(arg0 float64, arg1 float64) Shape {
	return Shape{Tag: ShapeRectangle, Rectangle0: arg0, Rectangle1: arg1}
}

type ShapeTag uint8

const (
	ShapeCircle ShapeTag = iota
	ShapeRectangle
)

type Shape struct {
	Tag        ShapeTag
	Circle     float64
	Rectangle0 float64
	Rectangle1 float64
}

func (s Shape) equals(other Shape) bool {
	if s.Tag != other.Tag {
		return false
	}
	switch s.Tag {
	case ShapeCircle:
		return s.Circle == other.Circle
	case ShapeRectangle:
		return s.Rectangle0 == other.Rectangle0 && s.Rectangle1 == other.Rectangle1
	default:
		return true
	}
}
