tests/spec/emit/snapshots/equality_enum_unit_variants.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  enum Color { Red, Green, Blue }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func (c Color) equals(other Color) bool {
	return c.Tag == other.Tag
}
