tests/spec/emit/snapshots/equality_field_private_cross_package_equals_uses_native.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Foo { x: int }
  
  impl Foo {
    fn equals(self, other: int) -> bool {
      false
    }
  }
  
  #[equality]
  struct Wrap { foo: Foo }
---
package main

type Foo struct {
	x int
}

func (f Foo) equals(_ int) bool {
	return false
}

type Wrap struct {
	foo Foo
}

func (w Wrap) equals(other Wrap) bool {
	return w.foo == other.foo
}
